# RichillCapital.BotEngine.Desktop.Qt

./: .flake8  .gitignore  .isort.cfg  .pylintrc  README.md  pyproject.toml  pyrightconfig.json  qtquickcontrols2.conf  requirements.txt  setup.cfg  style_rc.py  tox.ini  tsconfig.build.json  tsconfig.json
src/: App.qml  __main__.py  core.py  dependency_injection.py  interop.ts  js.js  main.qml
src/controls/: AppMenuBar.qml  AppSideBar.qml  Logo.qml  qmldir
src/controls/sidebar/: AppSideBar.qml  ProfileBox.qml  ProfilePopup.qml  ProfilePopupItem.qml  SideBarAnimations.qml  SideBarAnumations.qml  SideBarItem.qml
src/view_models/: __init__.py  app_view_model.py  bot_view_model.py  bots_view_model.py  file_system_view_model.py  main_view_model.py  monitor_view_model.py
src/views/: App.qml  main_window.qml
src/views/analyzer/: AnalyzerPage.qml
src/views/bots/: BotsPage.qml
src/views/login/: LoginPage.qml
src/views/monitor/: MonitorPage.qml
src/views/signIn/: SignInPage.qml
src/views/signin/: SignInPage.qml
src/views/strategies/: StrategiesPage.qml
tests/unit/: test_hello_world.py
