[project]
name = "richillcapital-bot-engine-desktop"
version = "0.0.1"
description = "A desktop application for bot management using Qt for Python."
authors = [
    {name = "Mengsyue Amao Tsai", email = "mengsyue.tsai@outlook.com"},
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "aiofile>=3.8.8",
    "pyside6>=6.5.3",
]


[tool.pdm.scripts]
start = "./src/__main__.py"
dev = "./src/__main__.py"
check = "pdm run lint"
test = "" 
build = "pdm build"
format = ""
lint = "pylint src/**/*.py tests/**/*.py -j 4 -ry --rcfile .pylintrc --output-format=colorized,parseable --msg-template='\n[{category} - {msg_id}] {symbol} | {msg}\n{path} ({line}, {column})\n'"

build_qrc = "pyside6-rcc <path-to.qrc> -o <path-to.py>"

[tool.pdm.dev-dependencies]
dev = [
    "tox-pdm>=0.7.0",
    "briefcase>=0.3.15",
    "flake8>=6.1.0",
    "flake8-docstrings>=1.7.0",
    "pep8-naming>=0.13.3",
    "pylint>=3.0.1",
    "mypy>=1.6.0",
    "black>=23.9.1",
    "autopep8>=2.0.4",
    "isort>=5.12.0",
    "pre-commit>=3.5.0",
]

