[metadata]
name = projectname
description = some awesome project
author = Mengsyue Amao Tsai <mengsyue.tsai@outlook.com>
license = MIT
license_file = LICENSE
platforms = win32
classifiers = 
    Programming Language :: Python :: 3.11

[options]
packages = 

install_requires =

python_requires = >=3.11,<3.12

package_dir = 

zip_safe = no