[metadata]
name = projectname
description = some awesome project
author = Mengsyue Amao Tsai <mengsyue.tsai@outlook.com>
license = MIT
license_file = LICENSE
platforms = win32
classifiers = 
    Programming Language :: Python :: 3.11

[options]
packages = 

install_requires =

python_requires = >=3.11,<3.12

package_dir = 

zip_safe = no

[options.extras_requires]
testing = 
    pytest>=7.4.2
    pytest-cov>=4.1.0
    isort>=5.12.0
    autopep8>=2.0.4
    black>=23.9.1
    mypy>=1.6.0
    pylint>=3.0.1
    pep8-naming>=0.13.3
    flake8-docstrings>=1.7.0
    flake8>=6.1.0
    tox-pdm>=0.7.0

[options.package_data]
slapping = py.typed

